Set up project card layout

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div id="container">
@@ -18,9 +19,48 @@
         <div id="projects-container">
             <p>The Odin Project portfolio</p>
             <div id="projects">
-                <div class="project"></div>
-                <div class="project"></div>
-                <div class="project"></div>
+                <div class="project">
+                    <div class="project-title">
+                        <p>Calculator</p>
+                    </div>
+                    <div class="tab"></div>
+                    <div class="project-image-container">
+                        <div class="project-image">
+                        </div>
+                    </div>
+                    <div class="icons-container">
+                        <img class="icon" id="github-calculator" src="./images/eye.png">
+                        <img class="icon" id="github-page" src="./images/github.png">
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-title">
+                        <p>Gruel</p>
+                    </div>
+                    <div class="tab"></div>
+                    <div class="project-image-container">
+                        <div class="project-image">
+                        </div>
+                    </div>
+                    <div class="icons-container">
+                        <img class="icon" id="github-gruel" src="./images/eye.png">
+                        <img class="icon" id="github-page" src="./images/github.png">
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-title">
+                        <p>Recipes</p>
+                    </div>
+                    <div class="tab"></div>
+                    <div class="project-image-container">
+                        <div class="project-image">
+                        </div>
+                    </div>
+                    <div class="icons-container">
+                        <img class="icon" id="github-recipes" src="./images/eye.png">
+                        <img class="icon" id="github-page" src="./images/github.png">
+                    </div>
+                </div>
                 <div class="project"></div>
                 <div class="project"></div>
                 <div class="project"></div>
