Add links to project pages

--- a/index.html
+++ b/index.html
@@ -18,52 +18,80 @@
         
         <div id="projects-container">
             <p>The Odin Project portfolio</p>
-            <div id="projects">
-                <div class="project">
-                    <div class="project-title">
-                        <p>Calculator</p>
-                    </div>
-                    <div class="tab"></div>
-                    <div class="project-image-container">
-                        <div class="project-image">
+            <div id="projects-window">
+                <div id="projects">
+                    <div class="project">
+                        <div class="project-title">
+                            <p>Calculator</p>
+                        </div>
+                        <div class="tab"></div>
+                        <div class="project-image-container">
+                            <div class="project-image">
+                            </div>
+                        </div>
+                        <div class="icons-container">
+                            <img class="icon" data-url = "https://durounseki.github.io/odin-calculator/" src="./images/eye.png">
+                            <img class="icon" data-url = "https://github.com/Durounseki/odin-calculator" src="./images/github.png">
                         </div>
                     </div>
-                    <div class="icons-container">
-                        <img class="icon" id="github-calculator" src="./images/eye.png">
-                        <img class="icon" id="github-page" src="./images/github.png">
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="project-title">
-                        <p>Gruel</p>
-                    </div>
-                    <div class="tab"></div>
-                    <div class="project-image-container">
-                        <div class="project-image">
+                    <div class="project">
+                        <div class="project-title">
+                            <p>Gruel</p>
+                        </div>
+                        <div class="tab"></div>
+                        <div class="project-image-container">
+                            <div class="project-image">
+                            </div>
+                        </div>
+                        <div class="icons-container">
+                            <img class="icon" data-url = "https://durounseki.github.io/odin-landing-page/" src="./images/eye.png">
+                            <img class="icon" data-url = "https://github.com/Durounseki/odin-landing-page" src="./images/github.png">
                         </div>
                     </div>
-                    <div class="icons-container">
-                        <img class="icon" id="github-gruel" src="./images/eye.png">
-                        <img class="icon" id="github-page" src="./images/github.png">
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="project-title">
-                        <p>Recipes</p>
-                    </div>
-                    <div class="tab"></div>
-                    <div class="project-image-container">
-                        <div class="project-image">
+                    <div class="project">
+                        <div class="project-title">
+                            <p>Sign-up Page</p>
+                        </div>
+                        <div class="tab"></div>
+                        <div class="project-image-container">
+                            <div class="project-image">
+                            </div>
+                        </div>
+                        <div class="icons-container">
+                            <img class="icon" data-url="https://durounseki.github.io/odin-landing-page/pages/sign-up.html" src="./images/eye.png">
+                            <img class="icon" data-url="https://github.com/Durounseki/odin-landing-page" src="./images/github.png">
                         </div>
                     </div>
-                    <div class="icons-container">
-                        <img class="icon" id="github-recipes" src="./images/eye.png">
-                        <img class="icon" id="github-page" src="./images/github.png">
+                    <div class="project">
+                        <div class="project-title">
+                            <p>Etch-a-Sketch</p>
+                        </div>
+                        <div class="tab"></div>
+                        <div class="project-image-container">
+                            <div class="project-image">
+                            </div>
+                        </div>
+                        <div class="icons-container">
+                            <img class="icon" data-url="https://durounseki.github.io/etch-a-sketch/" src="./images/eye.png">
+                            <img class="icon" data-url="https://github.com/Durounseki/etch-a-sketch" src="./images/github.png">
+                        </div>
                     </div>
+                    <div class="project">
+                        <div class="project-title">
+                            <p>Recipes</p>
+                        </div>
+                        <div class="tab"></div>
+                        <div class="project-image-container">
+                            <div class="project-image">
+                            </div>
+                        </div>
+                        <div class="icons-container">
+                            <img class="icon" data-url="https://durounseki.github.io/odin-recipes/" src="./images/eye.png">
+                            <img class="icon" data-url="https://github.com/Durounseki/odin-recipes" src="./images/github.png">
+                        </div>
+                    </div>
+                    <!-- <div class="project"></div> -->
                 </div>
-                <div class="project"></div>
-                <div class="project"></div>
-                <div class="project"></div>
             </div>
         </div>
 
