Add sidebar icons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,50 @@
 <body>
     <div id="container">
         <div id="sidebar">
-
+            <div id="dashboard-title">
+                <img src="./images/rectangles-mixed.png">
+                <p>Dashboard</p>
+            </div>
+            <div id="pages">
+                <div class="page">
+                    <img src="./images/house-blank.png" class="icon">
+                    <p>Home</p>
+                </div>
+                <div class="page">
+                    <img src="./images/user.png" class="icon">
+                    <p>Profile</p>
+                </div>
+                <div class="page">
+                    <img src="./images/messages.png" class="icon">
+                    <p>Messages</p>
+                </div>
+                <div class="page">
+                    <img src="./images/time-past.png" class="icon">
+                    <p>History</p>
+                </div>
+                <div class="page">
+                    <img src="./images/list-check.png" class="icon">
+                    <p>Tasks</p>
+                </div>
+                <div class="page">
+                    <img src="./images/users-medical.png" class="icon">
+                    <p>Communities</p>
+                </div>
+            </div>
+            <div id="settings">
+                <div class="settings">
+                    <img src="./images/settings-sliders.png" class="icon">
+                    <p>Settings</p>
+                </div>
+                <div class="settings">
+                    <img src="./images/user-headset.png" class="icon">
+                    <p>Support</p>
+                </div>
+                <div class="settings">
+                    <img src="./images/user-lock.png" class="icon">
+                    <p>Privacy</p>
+                </div>
+            </div>
         </div>
         <div id="header">
 
