--- a/index.html
+++ b/index.html
@@ -56,7 +56,27 @@
             </div>
         </div>
         <div id="header">
-
+            <div id="search-bar">
+                <img src="./images/search.png" class="icon">
+                <input type="text">
+            </div>
+            <div id="notifications">
+                <img src="./images/bells.png" class="icon">
+                <img src="./images/avatar1.png" class="avatar">
+                <p>Durounseki</p>
+            </div>
+            <div id="user">
+                <img src="./images/avatar1.png" class="avatar" id="user-avatar">
+                <div id="greeting">
+                    <p>I made this website</p>
+                    <h1>Durounseki (@durounseki)</h1>
+                </div>
+            </div>
+            <div id="links">
+                <div class="link">New</div>
+                <div class="link">Upload</div>
+                <div class="link">Share</div>
+            </div>
         </div>
         
         <div id="projects-container">
