Add thumbnails and hover icons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <!--Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="container">
@@ -58,7 +62,7 @@
         <div id="header">
             <div id="search-bar">
                 <img src="./images/search.png" class="icon">
-                <input type="text">
+                <input type="text" name="search">
             </div>
             <div id="notifications">
                 <img src="./images/bells.png" class="icon">
@@ -89,8 +93,7 @@
                         </div>
                         <div class="tab"></div>
                         <div class="project-image-container">
-                            <div class="project-image">
-                            </div>
+                            <img class="project-image" src="./images/calculator.png" alt="The Odin Project: Calculator">
                         </div>
                         <div class="icons-container">
                             <img class="icon" data-url = "https://durounseki.github.io/odin-calculator/" src="./images/eye.png">
@@ -103,8 +106,7 @@
                         </div>
                         <div class="tab"></div>
                         <div class="project-image-container">
-                            <div class="project-image">
-                            </div>
+                            <img class="project-image" src="./images/landing-page.png" alt="The Odin Project: Landing Page">
                         </div>
                         <div class="icons-container">
                             <img class="icon" data-url = "https://durounseki.github.io/odin-landing-page/" src="./images/eye.png">
@@ -117,11 +119,10 @@
                         </div>
                         <div class="tab"></div>
                         <div class="project-image-container">
-                            <div class="project-image">
-                            </div>
+                            <img class="project-image" src="./images/sign-up.png" alt="The Odin Project: Sign-up page">
                         </div>
                         <div class="icons-container">
-                            <img class="icon" data-url="https://durounseki.github.io/odin-landing-page/pages/sign-up.html" src="./images/eye.png">
+                            <img class="icon" data-url="https://durounseki.github.io/odin-landing-page/pages/sign-up" src="./images/eye.png">
                             <img class="icon" data-url="https://github.com/Durounseki/odin-landing-page" src="./images/github.png">
                         </div>
                     </div>
@@ -131,8 +132,7 @@
                         </div>
                         <div class="tab"></div>
                         <div class="project-image-container">
-                            <div class="project-image">
-                            </div>
+                            <img class="project-image" src="./images/etch-a-sketch.png" alt="The Odin Project: Etch-a-Sketch">
                         </div>
                         <div class="icons-container">
                             <img class="icon" data-url="https://durounseki.github.io/etch-a-sketch/" src="./images/eye.png">
@@ -145,8 +145,7 @@
                         </div>
                         <div class="tab"></div>
                         <div class="project-image-container">
-                            <div class="project-image">
-                            </div>
+                            <img class="project-image" src="./images/recipes.png" alt="The Odin Project: Recipes">
                         </div>
                         <div class="icons-container">
                             <img class="icon" data-url="https://durounseki.github.io/odin-recipes/" src="./images/eye.png">
@@ -187,7 +186,7 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <img src="./images/python.png" class="icon">
+                        <img src="./images/python.png" class="lang-icon">
                         <div class="progress-bar">
                             <div class="progress" data-progress="60"></div>
                         </div>
